feat(api): implement addStocksToWatchlist
